--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
       <label for="">Your message:</label><br />
       <textarea name="MessageToMe" id="" cols="30" rows="10"></textarea><br />
       <input type="submit" />
-      <p><a href="Βιογραφικο.html">Main Page</a></p>
+      <p><a href="index.html">Main Page</a></p>
     </form>
   </body>
 </html>
